<resources>
    <string name="app_name">Food Hygiene Scores</string>
    <string name="action_location">Location</string>
    <string name="search_action">Search</string>
    <string name="searchbar_hint">Search for a location</string>
    <string name="use_location_button">Use location button</string>
    <string name="intro_text">Use the searchbar or button below to start your search!</string>
    <string name="button_show_on_map">Show On Map</string>
    <string name="local_authority">Local Authority</string>
    <string name="authority_name">Authority Name:\u0020</string>
    <string name="website">Website:\u0020</string>
    <string name="email">Email:\u0020</string>
    <string name="rating_value">Rating Value:\u0020</string>
    <string name="confidence_in_management">Confidence In Management:\u0020</string>
    <string name="structural">Structural:\u0020</string>
    <string name="hygiene">Hygiene:\u0020</string>
    <string name="last_updated">Last Updated:\u0020</string>
    <string name="calender_icon">Calender Icon</string>
    <string name="address">Address</string>
    <string name="favourite_button">Favourite Button</string>
    <string name="score_unavailable">No Score Available.</string>
    <string name="date_error">Error getting date</string>
    <string name="view_more">Select a business to view more!</string>
    <string name="map_error">Unable to open map</string>
    <string name="location_disabled">Location Permissions Disabled</string>
    <string name="location_unavailable">Unable to get location</string>
    <string name="location_icon">Location Icon</string>
    <string name="question_mark">\?</string>
    <string name="favourites">Favourites</string>
    <string name="favourite">favourite</string>
    <string name="favourite_initial_text">You currently have no favourites. Favourite businesses will show here.</string>
    <string name="saved_message">Saved.</string>
    <string name="saved_error">Error Submitting Save.</string>
    <string name="delete_business">Delete Business</string>
    <string name="delete">Delete</string>
    <string name="delete_all_businesses">Delete All Businesses</string>
    <string name="delete_all">Delete All</string>
    <string name="favourites_deleted">All Favourites Deleted</string>
    <string name="favourite_removed">Favourite Removed</string>
    <string name="added_favourites">Added to favourites</string>
    <string name="undo">Undo</string>
    <string name="no_results_message">No Results returned, try a different search or try again later.</string>
</resources>