<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/card_style">

    <LinearLayout style="@style/card_layout">

        <TextView
            style="?attr/textAppearanceHeadline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/local_authority" />

        <LinearLayout style="@style/card_row">

            <TextView
                style="?attr/textAppearanceBody2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/authority_name" />

            <TextView
                android:id="@+id/authority_name"
                style="?attr/textAppearanceBody2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout style="@style/card_row">

            <TextView
                style="?attr/textAppearanceBody2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/website" />

            <TextView
                android:id="@+id/authority_website"
                style="?attr/textAppearanceBody2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web" />

        </LinearLayout>

        <LinearLayout style="@style/card_row">

            <TextView
                style="?attr/textAppearanceBody2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email" />

            <TextView
                android:id="@+id/authority_email"
                style="?attr/textAppearanceBody2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="email" />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>