<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/card_style">

    <LinearLayout style="@style/card_layout">

        <LinearLayout style="@style/card_row">

            <TextView
                style="?attr/textAppearanceHeadline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating_value" />

            <TextView
                android:id="@+id/rating_value"
                style="?attr/textAppearanceHeadline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout style="@style/card_row">

            <TextView
                style="?attr/textAppearanceBody2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hygiene" />

            <TextView
                android:id="@+id/hygiene"
                style="?attr/textAppearanceBody2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout style="@style/card_row">

            <TextView
                style="?attr/textAppearanceBody2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/structural" />

            <TextView
                android:id="@+id/structural"
                style="?attr/textAppearanceBody2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout style="@style/card_row">

            <TextView
                style="?attr/textAppearanceBody2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confidence_in_management" />

            <TextView
                android:id="@+id/confidenceInManagement"
                style="?attr/textAppearanceBody2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>


</com.google.android.material.card.MaterialCardView>